# flam

./: .gitignore  README.md  build.gradle.kts  github-link.txt  gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  opencv_processor.cpp  opencv_processor.h
app/src/main/java/com/flam/edgedetector/: MainActivity.kt  NativeLib.kt
app/src/main/java/com/flam/edgedetector/camera/: CameraManager.kt
app/src/main/java/com/flam/edgedetector/gl/: GLRenderer.kt  Shader.kt
app/src/main/java/com/flam/edgedetector/network/: WebSocketFrameStreamer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
web/: package.json  tsconfig.json
web/public/: index.html  ws-test.html
web/src/: FrameViewer.ts  index.ts
web/test/: simulate-android.js
